--- a/app/index.html
+++ b/app/index.html
@@ -50,7 +50,7 @@
           <li data-menuanchor="eval"><a href="#eval">评估</a></li>
           <li data-menuanchor="con"><a href="#con">结论</a></li>
           <li data-menuanchor="ref"><a href="#ref">参考资料</a></li>
-          <li><a href="tindex.html" target="_blank">教师页</a></li>
+          <li data-menuanchor="teacher"><a href="#teacher">教师页</a></li>
         </ul>
 
       </div>
