Add author information

--- a/app/index.html
+++ b/app/index.html
@@ -63,7 +63,7 @@
   <div class="section" id="sectionWelcome">
     <h1>雾霾知多少</h1>
 
-    <p>副标题在这里……喵喵喵喵喵</p>
+    <p>WebQuest学习设计</p>
     <a href="#intro">
       <button type="button" class="btn btn-primary btn-lg">
         <span class="glyphicon glyphicon-play" aria-hidden="true"></span> 开始学习
@@ -401,6 +401,20 @@ http://news.163.com/14/1016/04/A8LC4SIC00014AED.html
     <div class="overflow-padding"></div>
 
     <div class="container" style="text-align: left;">
+      <h3>作者</h3>
+
+      <p>
+        朱凯男
+        <br/>
+        10122510250
+        <br/>
+        kainan.zhu@outlook.com
+        <br/>
+        华东师范大学 软件学院
+        <br/>
+        本项目为WebQuest课程作业
+      </p>
+
       <h3>简介</h3>
 
       <p>
