--- a/app/index.html
+++ b/app/index.html
@@ -465,6 +465,10 @@ http://news.163.com/14/1016/04/A8LC4SIC00014AED.html
         传统的学习方式局限在一节节课中，比较局限，课下同学们有问题时往往难以及时得到有效的解决。通过WebQuest，锻炼了同学们独立思考的能力，并且带来一些新鲜感，可以促进师生课堂上的交流。
       </p>
 
+      <a href="images/s_teacher_0.gif" target="_blank">
+        <img src="images/s_teacher_0.gif" alt="" style="width: 100%;"/>
+      </a>
+
     </div>
 
     <div class="overflow-padding"></div>
