--- a/app/index.html
+++ b/app/index.html
@@ -63,7 +63,7 @@
   <div class="section" id="sectionWelcome">
     <h1>雾霾知多少</h1>
 
-    <p>WebQuest学习设计</p>
+    <p>初中三年级WebQuest学习设计</p>
     <a href="#intro">
       <button type="button" class="btn btn-primary btn-lg">
         <span class="glyphicon glyphicon-play" aria-hidden="true"></span> 开始学习
