Move mind map to references

--- a/app/index.html
+++ b/app/index.html
@@ -393,6 +393,10 @@ http://fashion.ifeng.com/health/detail_2013_01/31/21801804_0.shtml
 http://news.163.com/14/1016/04/A8LC4SIC00014AED.html
     </pre>
 
+    <a href="images/s_teacher_0.gif" target="_blank">
+      <img src="images/s_teacher_0.gif" alt="" style="width: 100%;"/>
+    </a>
+
     <div class="overflow-padding"></div>
   </div>
 
@@ -413,6 +417,10 @@ http://news.163.com/14/1016/04/A8LC4SIC00014AED.html
         华东师范大学 软件学院
         <br/>
         本项目为WebQuest课程作业
+        <br/>
+        项目地址：<a href="https://github.com/microdog/WebQuest-PM25">https://github.com/microdog/WebQuest-PM25</a>
+        <br/>
+        展示地址：<a href="http://webquest.microdog.me/pm25">http://webquest.microdog.me/pm25</a>
       </p>
 
       <h3>简介</h3>
@@ -464,10 +472,6 @@ http://news.163.com/14/1016/04/A8LC4SIC00014AED.html
       <p>
         传统的学习方式局限在一节节课中，比较局限，课下同学们有问题时往往难以及时得到有效的解决。通过WebQuest，锻炼了同学们独立思考的能力，并且带来一些新鲜感，可以促进师生课堂上的交流。
       </p>
-
-      <a href="images/s_teacher_0.gif" target="_blank">
-        <img src="images/s_teacher_0.gif" alt="" style="width: 100%;"/>
-      </a>
 
     </div>
 
